<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="button_addImage"> Add Image </string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="select_placemark_image">Select placemark image</string>

    <!-- Location -->
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_placemark_maps">Map of All Placemarks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>